Add XrJointPose and XrJointSpace features

--- a/crates/web-sys/Cargo.toml
+++ b/crates/web-sys/Cargo.toml
@@ -1513,6 +1513,8 @@ XrInputSourceEvent = ["Event"]
 XrInputSourceEventInit = []
 XrInputSourcesChangeEvent = ["Event"]
 XrInputSourcesChangeEventInit = []
+XrJointPose = []
+XrJointSpace = []
 XrLayer = ["EventTarget"]
 XrPermissionDescriptor = []
 XrPermissionStatus = ["EventTarget", "PermissionStatus"]
